--- a/MyTrade/Views/User/Tree.cshtml
+++ b/MyTrade/Views/User/Tree.cshtml
@@ -10,7 +10,7 @@
                 <div class="widget-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                            <h4>Top-Up</h4>
+                            <h4>Level Tree</h4>
                             
                         </div>
                     </div>
