--- a/MyTrade/Views/Downline/DirectList.cshtml
+++ b/MyTrade/Views/Downline/DirectList.cshtml
@@ -32,21 +32,21 @@
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>From Date  </label>
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
                                 </div>
                             </div>
                             <div class="col-lg-3">
                                 <div class="form-group">
                                     <label>To Date  </label>
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            @*<div class="col-md-3">
                                 <div class="form-group">
                                     <label>Leg</label>
                                     @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <label>Status</label>
@@ -71,7 +71,7 @@
                                         <th>Name</th>
                                         <th>Mobile No</th>
                                         <th>Email Id</th>
-                                        <th>Leg</th>
+                                        @*<th>Leg</th>*@
                                         <th>Joining Date</th>
                                         <th>Package</th>
                                         <th>Activation Date</th>
@@ -94,7 +94,7 @@
 
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
-                                                    <td>@Item.Leg</td>
+                                                    @*<td>@Item.Leg</td>*@
                                                     <td>@Item.JoiningDate</td>
                                                     <td>@Item.Package</td>
                                                     <td>@Item.PermanentDate</td>
@@ -116,9 +116,9 @@
     </div>
 </div>
 }
-<script src="../vendor/jquery/jquery.min.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
 
     $('#FromDate').datepicker({
