--- a/MyTrade/Views/Downline/DownLineList.cshtml
+++ b/MyTrade/Views/Downline/DownLineList.cshtml
@@ -42,12 +42,12 @@
                                         @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                @*<div class="col-md-3">
                                     <div class="form-group">
                                         <label>Leg</label>
                                         @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlleg, "Value", "Text"), new { @class = "form-control" })
                                     </div>
-                                </div>
+                                </div>*@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Status</label>
