--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -109,20 +109,12 @@
                 <div class="shadow-bottom"></div>
                 <ul class="list-unstyled menu-categories" id="accordionExample">
                     <li class="menu">
-                        <a href="#dashboard" data-active="true" data-toggle="collapse" aria-expanded="true" class="dropdown-toggle">
+                        <a href="/user/UserDashboard" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                                 <span>Dashboard</span>
                             </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                            </div>
                         </a>
-                        <ul class="collapse submenu list-unstyled" id="dashboard" data-parent="#accordionExample">
-                            <li>
-                                <a href="/user/UserDashboard">Dashboard</a>
-                            </li>
-                        </ul>
                     </li>
                     <li class="menu">
                         <a href="#Account" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
@@ -151,28 +143,15 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Team" data-parent="#accordionExample">
-                            <li>
+                            @*<li>
                                 <a href="/user/BinaryTree">Binary Tree</a>
-                            </li>
-                            <li>
+                            </li>*@
+                            @*<li>
                                 <a href="/Downline/DownLineList">Downline</a>
-                            </li>
+                            </li>*@
                             <li>
                                 <a href="/Downline/DirectList">Direct</a>
                             </li>
-                        </ul>
-                    </li>
-                    <li class="menu">
-                        <a href="#tree" aria-expanded="false" class="dropdown-toggle" data-toggle="collapse">
-                            <div class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                                <span>Tree</span>
-                            </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                            </div>
-                        </a>
-                        <ul class="collapse submenu list-unstyled" id="tree" data-parent="#accordionExample">
                             <li>
                                 <a href="/user/Tree">Level Tree</a>
                             </li>
@@ -181,6 +160,7 @@
                             </li>
                         </ul>
                     </li>
+                    
                     <li class="menu">
                         <a href="/user/PinList" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
@@ -261,6 +241,8 @@
     <script src="~/bootstrap/js/bootstrap.min.js"></script>
     <script src="~/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="~/assets/js/app.js"></script>
+    <script src="~/plugins/highlight/highlight.pack.js"></script>
+    <script src="~/assets/js/scrollspyNav.js"></script>
     <script>
         $(document).ready(function () {
             App.init();
@@ -270,7 +252,6 @@
     <script src="~/plugins/table/datatable/datatables.js"></script>
     <!-- END GLOBAL MANDATORY SCRIPTS -->
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
-    <script src="~/plugins/apex/apexcharts.min.js"></script>
     <script src="~/assets/js/dashboard/dash_2.js"></script>
 
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
