--- a/MyTrade/Views/Home/ConfirmRegistration.cshtml
+++ b/MyTrade/Views/Home/ConfirmRegistration.cshtml
@@ -25,7 +25,7 @@
     <div class="container-fluid maintanence-content">
         <div class="">
             <div class="maintanence-hero-img">
-                <img alt="logo" src="~/assets/img/cork-logo.png">
+                <img alt="logo" src="~/assets/img/tradelogo.png">
             </div>
             <h1 class="error-title">Success</h1>
             <p class="error-text">Thank you for your registration. Your Details are as Below</p>
@@ -33,7 +33,7 @@
             <span class="error-text">Password: <span class="error-text text-danger">@Session["Password"]</span> </span>
            <br />
             <br />
-            <a href="/Home/Login" target="_blank" class="btn btn-info">Go To Login</a>
+            <a href="/User/ActivateByPin" target="_blank" class="btn btn-info">Go To Dashboard</a>
             <a href="/Home/Registration" target="_blank" class="btn btn-info">Add New</a>
         </div>
     </div>
