--- a/MyTrade/Views/User/PinList.cshtml
+++ b/MyTrade/Views/User/PinList.cshtml
@@ -10,7 +10,7 @@
                 <div class="widget-header">
                     <div class="row">
                         <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                            <h4>Generate E-Pin</h4>
+                            <h4>Pin List</h4>
                             <span class="text-danger">
                                 @TempData["pin"]
                             </span>
