--- a/MyTrade/Views/Shared/_Menu.cshtml
+++ b/MyTrade/Views/Shared/_Menu.cshtml
@@ -1,21 +1,14 @@
 ﻿@model MyTrade.Models.Home
 <ul class="list-unstyled menu-categories" id="accordionExample">
     <li class="menu">
-        <a href="#dashboard" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+        <a href="/Admin/AdminDashboard" aria-expanded="false" class="dropdown-toggle">
             <div class="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                 <span>Dashboard</span>
             </div>
-            <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-            </div>
         </a>
-        <ul class="collapse submenu list-unstyled" id="dashboard" data-parent="#accordionExample">
-            <li>
-                <a href="/Admin/AdminDashboard">Dashboard</a>
-            </li>
-        </ul>
     </li>
+    
     @if (Model != null)
                 {
                     if (Model.lstMenu != null)
