Changes in Registration and TopUp

--- a/MyTrade/Views/Downline/AssociateTree.cshtml
+++ b/MyTrade/Views/Downline/AssociateTree.cshtml
@@ -39,9 +39,8 @@
                                                 <tr>
                                                     <th>S No.</th>
                                                     <th></th>
-
                                                     <th>LoginId</th>
-
+                                                    <th>Name</th>
                                                     <th>Status</th>
 
                                                 </tr>
@@ -70,7 +69,7 @@
 
                                                     </td>
                                                     <td>@Item.LoginId</td>
-
+                                                    <td>@Item.FirstName</td>
                                                     <td>
                                                         @if (Item.ActiveStatus == "Inactive")
                                                         {
@@ -94,7 +93,7 @@
                                                     <th>S No.</th>
                                                     <th></th>
                                                     <th>LoginId</th>
-
+                                                    <th>Name</th>
                                                     <th>Status</th>
                                                 </tr>
                                             </tfoot>
