--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -163,13 +163,24 @@
                     </li>
                     
                     <li class="menu">
-                        <a href="/user/PinList" aria-expanded="false" class="dropdown-toggle">
+                        <a href="#Pin" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                                <span>Pin List</span>
+                                <span>Pin Management</span>
                             </div>
-
+                            <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                            </div>
                         </a>
+                        <ul class="collapse submenu list-unstyled" id="Pin" data-parent="#accordionExample">
+                     
+                            <li>
+                                <a href="/User/PinList">Pin List</a>
+                            </li>
+                            <li>
+                                <a href="/User/PinTransferReport">Transfer Report</a>
+                            </li>
+                        </ul>
                     </li>
                     @*<li class="menu">
                             <a href="#app" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
